--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,30 @@ body {
     font-family: YuGothic, 'Yu Gothic', sans-serif;
 }
 
+#loader-bg {
+    position: relative;
+    width: 100%;
+    height: 100vh;
+}
+
+#loading {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateY(-50%) translateX(-50%);
+    -webkit- transform: translateY(-50%) translateX(-50%);
+    text-align: center;
+}
+
+#loading img {
+    width: 180px;
+}
+#loading h1 {
+    font-family: "Brandon_med";
+    font-size: 60px;
+    
+}
+
 main {
     position: -webkit-sticky;
     position: sticky;
@@ -72,7 +96,7 @@ section {
     height: 100vh;
     display: table;
     background-color: #CA4026;
-    background-image: url(../images/top.png);
+    background-image: url(../images/top2.png);
     background-size: cover;
     background-repeat: no-repeat;
     color: #fff;
@@ -270,6 +294,7 @@ a.scroll {
     letter-spacing: 2px;
     line-height: 50px;
 }
+
 .modaal-wrapper h3 span {
     font-size: 11px;
 }
@@ -305,7 +330,7 @@ a.scroll {
     box-shadow: 3px 3px 10px #555;
 }
 
-.modaal-wrapper .strip{
+.modaal-wrapper .strip {
     height: 60px;
 }
 
