--- a/css/style.css
+++ b/css/style.css
@@ -1,439 +1,455 @@
 * {
-    padding: 0;
-    margin: 0;
+  padding: 0;
+  margin: 0;
 }
 
 @font-face {
-    font-family: "TheGrateful3";
-    src: url(../fonts/TheGrateful3.ttf) format("truetype");
+  font-family: "TheGrateful3";
+  src: url(../fonts/TheGrateful3.ttf) format("truetype");
 }
 
 @font-face {
-    font-family: "Brandon_bld";
-    src: url(../fonts/Brandon_bld.otf) format("opentype");
+  font-family: "Brandon_bld";
+  src: url(../fonts/Brandon_bld.otf) format("opentype");
 }
 
 @font-face {
-    font-family: "Brandon_med";
-    src: url(../fonts/Brandon_med.otf) format("opentype");
+  font-family: "Brandon_med";
+  src: url(../fonts/Brandon_med.otf) format("opentype");
 }
 
 
 @font-face {
-    font-family: "Brandon_light";
-    src: url(../fonts/Brandon_light.otf) format("opentype");
+  font-family: "Brandon_light";
+  src: url(../fonts/Brandon_light.otf) format("opentype");
 }
 
 @font-face {
-    font-family: "Brandon_thin";
-    src: url(../fonts/Brandon_thin.otf) format("opentype");
+  font-family: "Brandon_thin";
+  src: url(../fonts/Brandon_thin.otf) format("opentype");
 }
 
 body {
-    font-family: YuGothic, 'Yu Gothic', sans-serif;
+  font-family: YuGothic, 'Yu Gothic', sans-serif;
+  background-color: #CA4026;
 }
 
 #loader-bg {
-    position: relative;
-    width: 100%;
-    height: 100vh;
+  position: relative;
+  width: 100%;
+  height: 100vh;
+/*  background-color: #CA4026;*/
+  background-color:  #fff;
+  
 }
 
 #loading {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translateY(-50%) translateX(-50%);
-    -webkit- transform: translateY(-50%) translateX(-50%);
-    text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translateY(-50%) translateX(-50%);
+  -webkit- transform: translateY(-50%) translateX(-50%);
+  text-align: center;
 }
 
 #loading img {
-    width: 180px;
+  width: 180px;
 }
+
 #loading h1 {
-    font-family: "Brandon_med";
-    font-size: 60px;
-    
+  font-family: "Brandon_med";
+  font-size: 60px;
+  color: #414143;
 }
 
 main {
-    position: -webkit-sticky;
-    position: sticky;
-    top: 0;
-    background-color: #f3f3f3;
-    padding-top: 50px;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  background-color: #f3f3f3;
+  padding-top: 50px;
 }
 
 section {
-    margin: 50px auto;
-    width: 1000px;
-    border-radius: 8px;
-    border: 1px #ddd solid;
-    padding: 20px 0 100px;
-    background: #fff;
-    box-shadow: 0px 0px 10px #3333331f;
+  margin: 50px auto;
+  width: 1000px;
+  border-radius: 8px;
+  border: 1px #ddd solid;
+  padding: 20px 0 100px;
+  background: #fff;
+  box-shadow: 0px 0px 10px #3333331f;
 }
 
 .title {
-    font-family: "Brandon_bld";
-    text-align: center;
-    font-size: 50px;
-    font-weight: normal;
-    margin: 70px auto;
-    overflow: hidden;
-    border-bottom: 4px dashed #CA4026;
-    width: 210px;
-    line-height: 53px;
+  font-family: "Brandon_bld";
+  text-align: center;
+  font-size: 50px;
+  font-weight: normal;
+  margin: 70px auto;
+  overflow: hidden;
+  border-bottom: 4px dashed #CA4026;
+  width: 210px;
+  line-height: 53px;
 }
 
 .inline {
-    display: inline-block;
+  display: inline-block;
 }
 
 #top {
-    width: 100%;
-    height: 100vh;
-    display: table;
-    background-color: #CA4026;
-    background-image: url(../images/top2.png);
-    background-size: cover;
-    background-repeat: no-repeat;
-    color: #fff;
-    background-attachment: fixed;
-    position: -webkit-sticky;
-    position: sticky;
-    top: 0;
+  width: 100%;
+  height: 100vh;
+  display: table;
+  background-position: top;
+  color: #fff;
+  background-attachment: fixed;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
 }
 
 .top {
-    text-align: center;
-    display: table-cell;
-    vertical-align: middle;
-    padding-bottom: 50px;
+  text-align: center;
+  display: table-cell;
+  vertical-align: middle;
+  padding-bottom: 50px;
+  background-color: #CA4026;
+  background-image: url(../images/top2.png);
+  background-size: cover;
 }
 
 #top h1 {
-    font-size: 75px;
-    font-family: "Brandon_bld";
-    letter-spacing: 5.5px;
-    text-shadow: 1px 1px 10px #333;
+  font-size: 75px;
+  font-family: "Brandon_bld";
+  letter-spacing: 5.5px;
+  text-shadow: 1px 1px 10px #333;
 }
 
 #top p {
-    font-size: 20px;
-    font-family: "Brandon_light";
-    letter-spacing: 2px;
+  font-size: 20px;
+  font-family: "Brandon_light";
+  letter-spacing: 2px;
 }
 
 a.scroll {
-    position: absolute;
-    bottom: 20px;
-    left: 50%;
-    z-index: 2;
-    display: inline-block;
-    -webkit-transform: translate(0, -50%);
-    transform: translate(0, -50%);
-    text-decoration: none;
-    color: #fff;
-    padding-top: 70px;
-    font-family: "Brandon_thin";
-    letter-spacing: 1px;
-    margin-left: -24px;
+  position: absolute;
+  bottom: 20px;
+  left: 50%;
+  z-index: 2;
+  display: inline-block;
+  -webkit-transform: translate(0, -50%);
+  transform: translate(0, -50%);
+  text-decoration: none;
+  color: #fff;
+  padding-top: 70px;
+  font-family: "Brandon_thin";
+  letter-spacing: 1px;
+  margin-left: -24px;
 }
 
 .scroll span {
-    position: absolute;
-    top: 0;
-    left: 50%;
-    width: 24px;
-    height: 24px;
-    margin-left: -12px;
-    border-left: 1px solid #fff;
-    border-bottom: 1px solid #fff;
-    -webkit-transform: rotate(-45deg);
-    transform: rotate(-45deg);
-    -webkit-animation: sdb 1.5s infinite;
-    animation: sdb 1.5s infinite;
-    box-sizing: border-box;
+  position: absolute;
+  top: 0;
+  left: 50%;
+  width: 24px;
+  height: 24px;
+  margin-left: -12px;
+  border-left: 1px solid #fff;
+  border-bottom: 1px solid #fff;
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  -webkit-animation: sdb 1.5s infinite;
+  animation: sdb 1.5s infinite;
+  box-sizing: border-box;
 }
 
 @-webkit-keyframes sdb {
-    0% {
-        -webkit-transform: rotate(-45deg) translate(0, 0);
-        opacity: 0;
-    }
-    50% {
-        opacity: 1;
-    }
-    100% {
-        -webkit-transform: rotate(-45deg) translate(-20px, 20px);
-        opacity: 0;
-    }
+  0% {
+    -webkit-transform: rotate(-45deg) translate(0, 0);
+    opacity: 0;
+  }
+
+  50% {
+    opacity: 1;
+  }
+
+  100% {
+    -webkit-transform: rotate(-45deg) translate(-20px, 20px);
+    opacity: 0;
+  }
 }
 
 @keyframes sdb {
-    0% {
-        transform: rotate(-45deg) translate(0, 0);
-        opacity: 0;
-    }
-    50% {
-        opacity: 1;
-    }
-    100% {
-        transform: rotate(-45deg) translate(-20px, 20px);
-        opacity: 0;
-    }
+  0% {
+    transform: rotate(-45deg) translate(0, 0);
+    opacity: 0;
+  }
+
+  50% {
+    opacity: 1;
+  }
+
+  100% {
+    transform: rotate(-45deg) translate(-20px, 20px);
+    opacity: 0;
+  }
 }
 
 #link-work {
-    text-align: center;
+  text-align: center;
 }
 
 .switch {
-    display: inline-block;
-    width: 800px;
+  display: inline-block;
+  width: 800px;
 }
 
 .work {
-    float: left;
-    width: 350px;
-    height: 233px;
-    margin: 25px;
-    overflow: hidden;
-    position: relative;
+  float: left;
+  width: 350px;
+  height: 233px;
+  margin: 25px;
+  overflow: hidden;
+  position: relative;
 }
 
 .description {
-    opacity: 0;
-    width: 100%;
-    height: 100%;
-    border-radius: 10px;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 10;
-    font-size: 20px;
-    background-color: rgba(0, 0, 0, 0.4);
-    color: #fff;
-    -webkit-transition: .5s ease-in-out;
-    transition: .5s ease-in-out;
-    text-align: left;
-    display: table;
+  opacity: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 10;
+  font-size: 20px;
+  background-color: rgba(0, 0, 0, 0.4);
+  color: #fff;
+  -webkit-transition: .5s ease-in-out;
+  transition: .5s ease-in-out;
+  text-align: left;
+  display: table;
 }
 
 .description h2 {
-    display: table-cell;
-    vertical-align: middle;
-    padding-left: 20px;
-    font-family: "Brandon_med";
-    letter-spacing: 2px;
-    font-size: 33px;
-    font-weight: normal;
+  display: table-cell;
+  vertical-align: middle;
+  padding-left: 20px;
+  font-family: "Brandon_med";
+  letter-spacing: 2px;
+  font-size: 33px;
+  font-weight: normal;
 }
 
 .description:hover {
-    opacity: 1;
+  opacity: 1;
 }
 
 .work img {
-    width: 350px;
-    border-radius: 10px;
+  width: 350px;
+  border-radius: 10px;
 }
 
 .work1 {
-    animation-delay: 0;
+  animation-delay: 0;
 }
 
 .work2 {
-    animation-delay: 0.1s;
-    /*
+  animation-delay: 0.1s;
+  /*
     width: 500px;
     height: 333px;
 */
 }
 
 .work2 img {
-    /*
+  /*
     width: 500px;
     height: 333px;
 */
 }
 
 .work3 {
-    animation-delay: 0.2s;
+  animation-delay: 0.2s;
 }
 
 .work4 {
-    animation-delay: 0.3s;
+  animation-delay: 0.3s;
 }
 
 .work5 {
-    animation-delay: 0.4s;
+  animation-delay: 0.4s;
 }
 
 .work6 {
-    animation-delay: 0.5s;
+  animation-delay: 0.5s;
 }
 
 .work7 {
-    animation-delay: 0.6s;
+  animation-delay: 0.6s;
 }
 
 .modaal-container {
-    text-align: center;
+  text-align: center;
 }
 
 .modaal-wrapper h2 {
-    font-family: "Brandon_med";
-    letter-spacing: 2px;
-    text-align: left;
+  font-family: "Brandon_med";
+  letter-spacing: 2px;
+  text-align: left;
 }
 
 .modaal-wrapper h3 {
-    letter-spacing: 2px;
-    line-height: 50px;
+  letter-spacing: 2px;
+  line-height: 50px;
 }
 
 .modaal-wrapper h3 span {
-    font-size: 11px;
+  font-size: 11px;
 }
 
 .modaal-wrapper .bold {
-    font-family: "Brandon_med";
-    font-size: 22px;
-    text-align: left;
+  font-family: "Brandon_med";
+  font-size: 22px;
+  text-align: left;
 }
 
 .modaal-wrapper .small {
-    font-family: "Brandon_light";
-    font-size: 15px;
-    text-align: left;
+  font-family: "Brandon_light";
+  font-size: 15px;
+  text-align: left;
 }
 
 .modaal-wrapper .text {
-    padding: 15px 0;
-    text-align: left;
+  padding: 15px 0;
+  text-align: left;
 }
 
 .modaal-wrapper img {
-    width: 70%;
-    display: inline-block;
-    margin-bottom: 50px;
-    box-shadow: 3px 3px 10px #555;
+  width: 70%;
+  display: inline-block;
+  margin-bottom: 50px;
+  box-shadow: 3px 3px 10px #555;
 }
 
 .modaal-wrapper video {
-    width: 70%;
-    display: inline-block;
-    margin-bottom: 50px;
-    box-shadow: 3px 3px 10px #555;
+  width: 70%;
+  display: inline-block;
+  margin-bottom: 50px;
+  box-shadow: 3px 3px 10px #555;
 }
 
 .modaal-wrapper .strip {
-    height: 60px;
+  height: 60px;
 }
 
 .modaal-wrapper .btn {
-    font-family: "Brandon_med";
-    font-size: 15pt;
-    color: #CA4026;
-    text-decoration: none;
-    letter-spacing: 2px;
-    position: relative;
-    text-align: center;
-    padding: 10px 45px;
-    width: 150px;
-    border: 2px solid #CA4026;
-    border-radius: 50px;
-    background-image: linear-gradient(-135deg, #CA4026, #CA4026 50%, #fff 50%, #fff);
-    background-size: 100% 500%;
-    background-position: bottom;
-    transition: all 0.4s ease;
+  font-family: "Brandon_med";
+  font-size: 15pt;
+  color: #CA4026;
+  text-decoration: none;
+  letter-spacing: 2px;
+  position: relative;
+  text-align: center;
+  padding: 10px 45px;
+  width: 150px;
+  border: 2px solid #CA4026;
+  border-radius: 50px;
+  background-image: linear-gradient(-135deg, #CA4026, #CA4026 50%, #fff 50%, #fff);
+  background-size: 100% 500%;
+  background-position: bottom;
+  transition: all 0.4s ease;
 }
 
 .btn:hover {
-    background-position: top;
-    color: #fff;
+  background-position: top;
+  color: #fff;
 }
 
 #link-about {}
 
 
 .inner {
-    width: 700px;
-    margin: 0 auto;
-    padding-bottom: 20px;
-    overflow: hidden;
+  width: 700px;
+  margin: 0 auto;
+  padding-bottom: 20px;
+  overflow: hidden;
 }
 
 .inner h2 {
-    font-family: "Brandon_med";
-    letter-spacing: 2px;
-    background: linear-gradient(transparent 60%, #fce53d 60%);
-    display: inline-block;
-    padding: 0 5px;
-    margin-bottom: 15px;
+  font-family: "Brandon_med";
+  letter-spacing: 2px;
+  background: linear-gradient(transparent 60%, #fce53d 60%);
+  display: inline-block;
+  padding: 0 5px;
+  margin-bottom: 15px;
 }
 
 .me {
-    width: 200px;
-    float: left;
-    box-shadow: 10px 10px #7e1331;
+  width: 200px;
+  float: left;
+  box-shadow: 10px 10px #7e1331;
 }
 
 .profile-inner {
-    width: 430px;
-    float: left;
-    margin-left: 70px;
-    font-size: 14px;
+  width: 430px;
+  float: left;
+  margin-left: 70px;
+  font-size: 14px;
+  margin-bottom: 40px;
 }
 
 .profile-inner h1 {
-    font-size: 40px;
-    letter-spacing: 0.1em;
+  font-size: 40px;
+  letter-spacing: 0.1em;
 }
 
 .profile-inner h3 {
-    font-family: "TheGrateful3";
-    font-size: 15px;
-    font-weight: normal;
-    margin-bottom: 20px;
+  font-family: "TheGrateful3";
+  font-size: 15px;
+  font-weight: normal;
+  margin-bottom: 20px;
 }
 
 table {
-    width: 700px;
-    text-align: left;
-    display: inline-block;
+  width: 700px;
+  text-align: left;
+  display: inline-block;
 }
 
 td {
-    padding-bottom: 20px;
+  padding-bottom: 20px;
 }
 
 .date {
-    padding-right: 25px;
-    vertical-align: top;
+  padding-right: 25px;
+  vertical-align: top;
 }
 
 table span {
-    font-size: 12px;
+  font-size: 12px;
 }
 
 footer {
-    width: 100%;
-    height: 70px;
-    text-align: center;
-    background-color: #CA4026;
+  width: 100%;
+  height: 70px;
+  text-align: center;
+  background-color: #CA4026;
 }
 
 footer i {
-    width: 40px;
-    float: left;
-    color: #fff;
+  width: 40px;
+  height: 70px;
+  margin: 0 5px;
+  float: left;
+  color: #fff;
+}
+
+footer i:hover {
+  transform: scale(1.2, 1.2);
 }
 
 .fab,
 .fas {
-    line-height: 70px;
+  line-height: 70px;
 }
