--- a/css/style.css
+++ b/css/style.css
@@ -283,44 +283,47 @@ a.scroll {
   border-radius: 10px;
 }
 
-.work1 {
+.work10 {
   animation-delay: 0;
 }
 
-.work2 {
+.work9 {
   animation-delay: 0.1s;
-  /*
-    width: 500px;
-    height: 333px;
-*/
 }
 
-.work2 img {
-  /*
-    width: 500px;
-    height: 333px;
-*/
-}
-
-.work3 {
+.work8 {
   animation-delay: 0.2s;
 }
 
-.work4 {
+.work7 {
   animation-delay: 0.3s;
 }
 
-.work5 {
+.work6 {
   animation-delay: 0.4s;
 }
 
-.work6 {
+.work5 {
   animation-delay: 0.5s;
 }
 
-.work7 {
+.work4 {
   animation-delay: 0.6s;
 }
+
+.work3 {
+  animation-delay: 0.7s;
+}
+
+.work2 {
+  animation-delay: 0.8s;
+}
+
+.work1 {
+  animation-delay: 0.9s;
+}
+
+
 
 .modaal-container {
   text-align: center;
@@ -362,6 +365,7 @@ a.scroll {
   width: 70%;
   display: inline-block;
   margin-bottom: 50px;
+  margin-top: 20px;
   box-shadow: 3px 3px 10px #555;
 }
 
